package ar.edu.utn.frba.dds.entidades;

public enum TipoDeEntidad {
  SUBTERRANEO,
  FERROCARRIL,
  SUPERMERCADO,
  BANCO
}
